--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,5 @@ jobs:
 
       - run:
           name: Deploy to Umbler
-          command: git remote add origin https://naboo.deploy.umbler.com/6j571vye/automatedhouse-top.git && git push origin master
+          command: git push origin master
+          # command: git remote add origin https://naboo.deploy.umbler.com/6j571vye/automatedhouse-top.git && git push origin master
