--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,26 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
+general:
+  branches:
+    only:
+      - dev
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
+      - image: circleci/node:8.9.0
 
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: yarn install
+      - run:
+          name: Install Packages (yarn install)
+          command: yarn install
 
       - save_cache:
           paths:
@@ -34,6 +28,16 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: yarn test
+      # - run: yarn test
 
+      - run:
+          name: Avoid hosts unknown
+          command: echo -e "Host naboo.deploy.umbler.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
 
+      - add_ssh_keys:
+          fingerprints:
+            - "36:5e:58:17:19:b7:55:03:fd:a7:5f:bb:07:f4:1a:32"
+
+      - run:
+          name: Deploy to Umbler
+          command: git remote add umbler ssh://git@naboo.deploy.umbler.com:9922/6j571vye/automatedhouse-top.git && git push umbler master
